<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingStart="36dp"
    android:paddingEnd="36dp">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_title_text"
        android:textSize="48sp"
        android:textColor="@color/red_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_description_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/title_tv"/>

    <TextView
        android:id="@+id/pan_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pan_number_hint_text"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.28"/>

    <EditText
        android:id="@+id/pan_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pan_number_hint_text"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/pan_title_text"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_selectors"/>


    <TextView
        android:id="@+id/birthdate_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birthdate_title_text"
        app:layout_constraintTop_toBottomOf="@+id/pan_number_edit_text"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/day_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dd_hint_text"
        android:background="@drawable/et_selectors"
        app:layout_constraintTop_toBottomOf="@+id/birthdate_title_text"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/month_et"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>

    <EditText
        android:id="@+id/month_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/month_hint_text"
        android:background="@drawable/et_selectors"
        app:layout_constraintTop_toBottomOf="@+id/birthdate_title_text"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toEndOf="@id/day_et"
        app:layout_constraintEnd_toStartOf="@id/year_et"/>

    <EditText
        android:id="@+id/year_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/yyyy_et"
        android:background="@drawable/et_selectors"
        app:layout_constraintTop_toBottomOf="@+id/birthdate_title_text"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintStart_toEndOf="@id/month_et"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/policy_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prolicy_text"
        app:layout_constraintBottom_toTopOf="@+id/next_btn"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/year_et"
        app:layout_constraintVertical_bias="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_btn_text"
        android:background="@drawable/bg_button"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/no_pan_tv"/>

    <TextView
        android:id="@+id/no_pan_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_don_t_have_pan_text"
        android:textColor="@color/purple_500"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>